--- a/backendkled/ledfront/src/app/adding/addart/addart.component.html
+++ b/backendkled/ledfront/src/app/adding/addart/addart.component.html
@@ -1,3 +1,4 @@
+<mat-progress-bar *ngIf="pokazi" color="warn" mode="indeterminate"></mat-progress-bar>
 <div style="padding: 1rem;"></div>
 
 <div class="container" style="width: 100%;">
@@ -105,7 +106,5 @@
 
 
     </form>
-    <div *ngIf="showSpiner" class="spinerr">
-        <mat-spinner></mat-spinner>
-    </div>
+   
 </div>
