--- a/backendkled/ledfront/src/app/components/art-categori/art-categori.component.html
+++ b/backendkled/ledfront/src/app/components/art-categori/art-categori.component.html
@@ -1,31 +1,38 @@
-
 <div style="margin: 2rem 1rem;">
 
   <pagination-controls class="text-center myPagination" previousLabel=" " nextLabel=" " (pageChange)="p = $event"
-  maxSize="5"> </pagination-controls>
-<div class="proizvodi">
+    maxSize="5"> </pagination-controls>
+  <div class="proizvodi">
 
-  <div *ngFor="let art of artikli |paginate:{ 
+    <div *ngFor="let art of artikli |paginate:{ 
     itemsPerPage:20, 
     currentPage: p}">
-    <mat-card>
-     
-      <img  mat-card-image [src]="getImage(art.srcSlika)" alt="">
-      <mat-card-content>
-        <h3>{{art.cenaArtikla}}.00</h3>
-        <button mat-mini-fab (click)="addShop(art)" ><mat-icon>shopping_basket</mat-icon></button>
-      </mat-card-content>
-      <mat-card-title>{{art.nazivArtikla}} &nbsp; {{art.sifraArtikla}}</mat-card-title>
-       
-      <mat-card-actions>
-        <button mat-raised-button color="primary" (click)="editArt(art)">EDIT</button>
-        <button mat-raised-button color="warn" (click)="deleteArt(art)"> DELETE</button>
-      </mat-card-actions>
-    </mat-card>
+      <mat-card>
+
+        <img mat-card-image (click)="openArtikal(art)" [src]="getImage(art.srcSlika)" alt="">
+        <div class="akcija">
+          <img *ngIf="art.akcija" src="../../../../assets/akcija.png" alt="">
+        </div>
+        <mat-card-content>
+          <h3 class="popust  text-danger" *ngIf="art.popust > 0">
+            {{(art.cenaArtikla + (art.cenaArtikla*(art.popust/(100-art.popust)))) | number:'' }}</h3>
+          <h3>{{art.cenaArtikla | number:''}}.00</h3>
+
+        </mat-card-content>
+        <mat-card-title>{{art.nazivArtikla}} &nbsp; {{art.sifraArtikla}} </mat-card-title>
+        <button mat-stroked-button color="accent" (click)="addShop(art)" style="width: 100%; outline: none;">
+          <mat-icon>shopping_basket</mat-icon>
+        </button>
+
+        <mat-card-actions *ngIf="ulogovanIn()">
+          <button mat-raised-button color="primary" (click)="editArt(art)">EDIT</button>
+          <button mat-raised-button color="warn" (click)="deleteArt(art)"> DELETE</button>
+        </mat-card-actions>
+      </mat-card>
+    </div>
+
   </div>
 
-</div>
-
-<pagination-controls class="text-center myPagination" previousLabel=" " nextLabel=" " (pageChange)="p = $event"
-  maxSize="5"> </pagination-controls>
+  <pagination-controls class="text-center myPagination" previousLabel=" " nextLabel=" " (pageChange)="p = $event"
+    maxSize="5"> </pagination-controls>
 </div>
