--- a/backendkled/ledfront/src/app/components/emails/emails.component.html
+++ b/backendkled/ledfront/src/app/components/emails/emails.component.html
@@ -1,3 +1,4 @@
+<mat-progress-bar *ngIf="pokazi" color="warn" mode="indeterminate"></mat-progress-bar>
 <div class="email">
 
     <form [formGroup]="emailForm" (ngSubmit)="sendMail()">
