--- a/backendkled/ledfront/src/app/components/home/artikal/artikal.component.css
+++ b/backendkled/ledfront/src/app/components/home/artikal/artikal.component.css
@@ -48,13 +48,15 @@ input[type=number]::-webkit-outer-spin-button {
 .kol input{
     
     text-decoration: none;
-    width: 60px;
+    max-width: 70px;
+    width: 50px;
     margin: 0 10px;
     font-size: 20px;
     padding: 6px;
     border-radius: 3px;
     border: 1px solid rgb(169, 169, 169);
     outline: none;
+    text-align: center;
     
 }
 .kol span{
