--- a/backendkled/ledfront/src/app/components/home/home.component.html
+++ b/backendkled/ledfront/src/app/components/home/home.component.html
@@ -58,6 +58,7 @@
             <h3>{{art.cenaArtikla | number:''}}.00</h3>
            
           </mat-card-content>
+          <mat-card-title>{{art.nazivArtikla}} &nbsp; {{art.sifraArtikla}} </mat-card-title>
           
           <button   mat-stroked-button color="accent" (click)="addShop(art)" style="width: 100%; outline: none;" >
             <mat-icon>shopping_basket</mat-icon>
