--- a/backendkled/ledfront/src/app/components/home/home.component.html
+++ b/backendkled/ledfront/src/app/components/home/home.component.html
@@ -53,10 +53,16 @@
     <hr>
     <pagination-controls class="text-center myPagination" previousLabel=" " nextLabel=" " (pageChange)="p = $event"
       maxSize="5"> </pagination-controls>
+    <div class="itemPer">
+      <span>Prikaži: &nbsp;</span>
+      <span (click)="changePerPage(10)">10 &nbsp;/&nbsp;</span>
+      <span (click)="changePerPage(20)">20 &nbsp;/&nbsp;</span>
+      <span (click)="changePerPage(30)">30</span>
+    </div>
     <div class="proizvodi">
 
       <div *ngFor="let art of artikli |paginate:{ 
-        itemsPerPage:20, 
+        itemsPerPage:itemPerPage, 
         currentPage: p}">
         <mat-card>
 
@@ -69,14 +75,14 @@
           </div>
           <mat-card-content>
             <h3 class="popust  text-danger" *ngIf="art.popust > 0">
-              {{(art.cenaArtikla + (art.cenaArtikla*(art.popust/(100-art.popust)))) | number:'' }} </h3> 
+              {{(art.cenaArtikla + (art.cenaArtikla*(art.popust/(100-art.popust)))) | number:'' }} </h3>
             <h3>{{art.cenaArtikla | number:''}}.00</h3>
 
           </mat-card-content>
           <mat-card-title>{{art.nazivArtikla}} </mat-card-title>
 
           <button class="shopCartBtn" mat-stroked-button color="accent" (click)="addShop(art)">
-             <mat-icon>add_shopping_cart</mat-icon>
+            <mat-icon>add_shopping_cart</mat-icon>
           </button>
           <mat-card-actions *ngIf="ulogovan">
             <button mat-raised-button color="primary" (click)="editArt(art)">EDIT</button>
