--- a/backendkled/ledfront/src/app/components/home/artikal/artikal.component.html
+++ b/backendkled/ledfront/src/app/components/home/artikal/artikal.component.html
@@ -1,7 +1,7 @@
 
 <div class="artikal">
     <div class="slika">
-        <img [src]="getImage(artikal.srcSlika)" alt="">
+        <img [src]="getImageArt()" alt="">
         <div *ngIf="artikal.popust>0" class="popustProcenat">
             <h2>-{{artikal.popust}}%</h2>
         </div>
