--- a/backendkled/ledfront/src/app/footer/footer.component.html
+++ b/backendkled/ledfront/src/app/footer/footer.component.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="footer-bottom">
-        <a href="https://www.facebook.com/bojan.maric.108">2020 &copy; Designed by Bojan Maric
+        <a href="https://www.facebook.com/bojan.maric.108">2020 &copy; Designed by TEAM SRB
             <i class="fa fa-facebook-f" [ngStyle]="{'color': '#ffffff'}"></i>
         </a>
 
