--- a/backendkled/ledfront/src/app/navigation/navigation.component.html
+++ b/backendkled/ledfront/src/app/navigation/navigation.component.html
@@ -252,6 +252,8 @@
       <mat-menu #belowMenu="matMenu" xPosition="before">
         <a mat-menu-item [routerLink]="['/addArtical']">Dodaj Artikal</a>
         <a mat-menu-item [routerLink]="['/addGallery']">Dodaj u galeriju</a>
+        <a mat-menu-item [routerLink]="['/addKatalog']">Dodaj katalog</a>
+
       </mat-menu>
 
 
